testsuite/tests/gnatcheck_errors/invalid_lkql_rules_config/extra_param.lkql
val rules = @{
    goto_statements: [{only_unconditional: true, extra: false}]
}
